# OpenCampus-ApplicationofTransformers

./: .flake8  .gitignore  .pre-commit-config.yaml  .trivyignore  Makefile  README.md  pyproject.toml  trivy.tpl
.github/: dependabot.yaml
.github/codeql/: codeql-config.yaml
.github/helper_scripts/: trivy_dependencies_check.sh
.github/workflows/: build_pipeline_CD.yaml  build_pipeline_CI.yaml  security_scan.yaml
data/: tweetyface.yaml  tweetyface_short.yaml  userlist.txt
data/tweetyface_de/: train.json  validation.json
data/tweetyface_en/: validation.json
src/NLP_Project/: Exploration_Preprocessing.ipynb  Model.ipynb  constants.py  database.py  dataset.py  feature_engineering.py  main.py  model_exploration.ipynb  preprocess_dataset.ipynb
src/NLP_Project/archive/: Exploration_Preprocessing.ipynb  feature_engineering.py  preprocess_dataset.ipynb
src/lectures/: lecture1.ipynb  transformers.ipynb
