[tool.poetry]
name = "NLP_Project"
version = "0.1.0"
description = ""
authors = ["Janosch Hoefer <janosch.hoefer@student.fh-kiel.de>"]


[tool.poetry.scripts]
main = "src.NLP_Project.main:main"

[tool.poetry.dependencies]
python = "^3.10"
transformers = { extras = ["sentencepiece"], version = "^4.23.1" }
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
ipywidgets = "^8.0.2"
tqdm = "^4.64.1"
mkl = "^2022.2.0"
mkl-include = "^2022.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"
