[tool.poetry]
name = "NLP_Project"
version = "0.1.0"
description = ""
authors = ["Janosch Hoefer <janosch.hoefer@student.fh-kiel.de>"]


[tool.poetry.scripts]
main = "src.NLP_Project.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
ipywidgets = "^8.0.2"
tqdm = "^4.64.1"
# Pytorch
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
# HuggingFace
datasets = "^2.7.0"
evaluate = "^0.3.0"
transformers = { extras = ["sentencepiece"], version = "^4.23.1" }
# DataGeneration
python-dotenv = "^0.21.0"
pymongo = "^4.3.2"
scikit-learn = "^1.2.1"
tweepy = "^4.12.0"
# Other
mkl = "^2022.2.0"
mkl-include = "^2022.2.0"
pyarrow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
black = { extras = ["jupyter"], version = "^22.10.0" }
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
ipykernel = "^6.16.0"

[tool.poetry.group.SpaCy.dependencies]
spacy = "^3.4.3"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1-py3-none-any.whl" }


[tool.poetry.group.Visuals.dependencies]
seaborn = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"
